@@ -2,7 +2,9 @@ Cascading Change Log
 
 unreleased
 
-  Fixed bug preventing custom c.s.Scheme types from using a different key/value classes in some situations. 
+  Updated many error messages to print the number of fields along with a list of the field names.
+
+  Fixed bug preventing custom c.s.Scheme types from using a different key/value classes in some situations.
 
   Fixed bug preventing c.t.TemplateTap from being written to in Reducer.
 
